Archive2/7b/ed98561b1ab092/output
main.cpp: In function 'int main()':
main.cpp:23:42: error: must #include <typeinfo> before using typeid
     FieldProperty test("TEST", typeid(int));
                                          ^
